@@ -22,7 +22,7 @@ m4_define([garcon_minimum_version], [0.1.2])
 m4_define([exo_minimum_version], [0.3.100])
 m4_define([thunar_minimum_version], [1.1.3])
 m4_define([dbus_minimum_version], [0.34])
-m4_define([wnck_minimum_version], [2.12])
+m4_define([wnck_minimum_version], [2.22])
 m4_define([intltool_minimum_version], [0.31])
 m4_define([xfconf_minimum_version], [4.6.0])
 
